# fusedswiglu

./: LICENSE  README.md  setup.cfg
fused_swiglu/: __init__.py  swiglu.py  swiglu_f16.py  test_swiglu.py
fused_swiglu/kernels/: kernels_bf16.py  kernels_fp16.py
