[metadata]
name = triton-fused-swiglu
version = 0.1.0
author = Benjamin Fattori
author_email = ben.fattori@mail.utoronto.ca
url = https://github.com/fattorib/fused_swiglu
descript = Fused SwiGLU kernels in triton
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    einops >= 0.7.0
    pytest
    torch >= 2.1.2
    triton >= 2.1.0


